# microes

./: .clang-format  .clangd  .gitignore  .gitmodules  .mcp.json  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  playable.html  pnpm-lock.yaml  pnpm-workspace.yaml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: bridge_server.rs  compiler.rs  embedded_assets.rs  lib.rs  main.rs  preview_server.rs  preview_template.html
examples/: CMakeLists.txt
examples/audio-demo/: project.esproject
examples/audio-demo/assets/scenes/: main.esscene
examples/audio-demo/src/: components.ts  main.ts
examples/audio-demo/src/systems/: sfx.ts  visualizer.ts
examples/collision-layers/: project.esproject
examples/collision-layers/assets/scenes/: main.esscene
examples/collision-layers/src/: components.ts  main.ts
examples/collision-layers/src/systems/: spawn.ts
examples/ecs-basics/: project.esproject
examples/ecs-basics/assets/scenes/: main.esscene
examples/ecs-basics/src/: components.ts  main.ts
examples/ecs-basics/src/systems/: bounce.ts  lifetime.ts  move.ts  setup.ts  spawner.ts
examples/event-system/: project.esproject
examples/event-system/src/: components.ts  events.ts  main.ts
examples/event-system/src/systems/: animate.ts  collect.ts  score.ts  setup.ts  spawn.ts  timer.ts
examples/hello-world/: project.esproject
examples/hello-world/assets/scenes/: main.esscene
examples/hello-world/src/: components.ts  main.ts
examples/hello-world/src/systems/: animate.ts
examples/hello_triangle/: main.cpp
examples/input-demo/: project.esproject
examples/input-demo/assets/scenes/: main.esscene
examples/input-demo/src/: components.ts  main.ts
examples/input-demo/src/systems/: keyboard.ts  mouse.ts  trail.ts
examples/particle-demo/: project.esproject
examples/particle-demo/assets/scenes/: main.esscene
examples/particle-demo/src/: main.ts
examples/physics-playground/: project.esproject
examples/physics-playground/assets/scenes/: main.esscene
examples/physics-playground/src/: components.ts
examples/physics-playground/src/systems/: spawn.ts
examples/platformer/: .gitignore  project.esproject
examples/platformer/assets/scenes/: main.esscene
examples/platformer/src/: components.ts  main.ts
examples/platformer/src/systems/: coin.ts  player.ts
examples/postprocess-effects/: project.esproject
examples/postprocess-effects/assets/scenes/: main.esscene
examples/postprocess-effects/src/: components.ts  main.ts
examples/postprocess-effects/src/systems/: animate.ts
examples/sprite-animation/: project.esproject  tsconfig.json
examples/sprite-animation/assets/animations/: idle.esanim  walk.esanim
examples/sprite-animation/assets/scenes/: main.esscene
examples/sprite-animation/src/: components.ts  main.ts
examples/sprite-animation/src/systems/: switch.ts
examples/sprite-rendering/: project.esproject
examples/sprite-rendering/assets/scenes/: main.esscene
examples/sprite-rendering/src/: components.ts  main.ts
examples/sprite-rendering/src/systems/: animate.ts
examples/tween-animation/: project.esproject
examples/tween-animation/assets/scenes/: main.esscene
examples/tween-animation/src/: components.ts  main.ts
examples/tween-animation/src/systems/: setup.ts
examples/ui-controls/: project.esproject
examples/ui-controls/assets/scenes/: main.esscene
examples/ui-controls/src/: components.ts  main.ts
examples/ui-controls/src/systems/: animate.ts
examples/ui-interaction/: project.esproject
examples/ui-interaction/.esengine/: settings.json
examples/ui-interaction/assets/scenes/: main.esscene
examples/ui-interaction/src/: main.ts
examples/ui-layout/: project.esproject
examples/ui-layout/assets/scenes/: main.esscene
examples/ui-layout/src/: main.ts
src/esengine/editor/: AssetDatabase.cpp  AssetDatabase.hpp  CMakeLists.txt  DragDropManager.cpp  DragDropManager.hpp  DragDropTypes.hpp  EditorApplication.cpp  EditorApplication.hpp  ThumbnailGenerator.cpp  ThumbnailGenerator.hpp  main.cpp
src/esengine/editor/camera/: EditorCamera.cpp  EditorCamera.hpp
src/esengine/editor/command/: Command.hpp  CommandHistory.hpp  EditorCommands.hpp  MacroCommand.hpp  PropertyCommand.hpp  TransformCommand.hpp
src/esengine/editor/core/: EditorEvents.hpp  Selection.hpp
src/esengine/editor/gizmo/: TransformGizmo.cpp  TransformGizmo.hpp
src/esengine/editor/panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.hpp  AssetBrowserTypes.hpp  AssetGridItem.cpp  AssetGridItem.hpp  GameViewPanel.cpp  GameViewPanel.hpp  HierarchyPanel.cpp  HierarchyPanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  NewProjectDialog.cpp  NewProjectDialog.hpp  OutputLogPanel.cpp  OutputLogPanel.hpp  ProjectLauncherPanel.cpp  ProjectLauncherPanel.hpp  SceneViewPanel.cpp  SceneViewPanel.hpp
src/esengine/editor/preview/: WebExporter.cpp  WebExporter.hpp  WebPreviewServer.cpp  WebPreviewServer.hpp
src/esengine/editor/project/: ProjectManager.cpp  ProjectManager.hpp  ProjectSerializer.cpp  ProjectSerializer.hpp  ProjectTypes.hpp  RecentProjectsManager.cpp  RecentProjectsManager.hpp
src/esengine/editor/property/: PropertyEditor.cpp  PropertyEditor.hpp
src/esengine/editor/property/editors/: BoolEditor.cpp  BoolEditor.hpp  ColorEditor.cpp  ColorEditor.hpp  EnumEditor.cpp  EnumEditor.hpp  FloatEditor.cpp  FloatEditor.hpp  IntEditor.cpp  IntEditor.hpp  StringEditor.cpp  (+5 more)
src/esengine/editor/scene/: SceneSerializer.cpp  SceneSerializer.hpp
src/esengine/editor/script/: ScriptComponentRegistry.cpp  ScriptComponentRegistry.hpp
src/esengine/editor/widgets/: DrawerPanel.cpp  DrawerPanel.hpp  EditorRootContainer.cpp  EditorRootContainer.hpp  EditorToolbar.cpp  EditorToolbar.hpp  SceneToolbar.cpp  SceneToolbar.hpp  StatusBar.cpp  StatusBar.hpp
tests/: CMakeLists.txt
tests/ecs/: test_registry.cpp
tests/editor/: test_commands.cpp
tests/events/: test_events.cpp
tests/particle/: test_particle.cpp
(+1266 files in other folders)
