[package]
name = "esengine-editor"
version = "0.1.0"
description = "Estella Editor Desktop Application"
authors = ["Estella Team"]
edition = "2021"

[lib]
name = "esengine_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "macros"] }
tiny_http = "0.12"
open = "5"
urlencoding = "2"
zip = "2"
url = "2"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
flate2 = "1"
tar = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
